[gd_scene load_steps=13 format=3 uid="uid://g2ue2ib1qh17"]

[ext_resource type="PackedScene" uid="uid://cxx88roy34r0w" path="res://scenes/trap/object_template.tscn" id="1_dtbio"]
[ext_resource type="Script" path="res://scripts/trap/fire.gd" id="2_0si5v"]
[ext_resource type="Texture2D" uid="uid://ceuo0glk77cg6" path="res://assets/Traps/Fire/Off.png" id="2_yk6pm"]
[ext_resource type="Texture2D" uid="uid://ct7lv0bw3kh17" path="res://assets/Traps/Fire/On (16x32).png" id="3_1unmu"]
[ext_resource type="Texture2D" uid="uid://bkpnsolobemdo" path="res://assets/Traps/Fire/Hit (16x32).png" id="4_bwcux"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_at8ie"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0crwd"]
size = Vector2(10, 10)

[sub_resource type="Animation" id="Animation_yjx7p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_yk6pm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DetectionArea/Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_thbm8"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_bwcux")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_sjb4c"]
resource_name = "off"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_yk6pm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DetectionArea/Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fbi8r"]
resource_name = "on"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_1unmu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DetectionArea/Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ypk0"]
_data = {
"RESET": SubResource("Animation_yjx7p"),
"hit": SubResource("Animation_thbm8"),
"off": SubResource("Animation_sjb4c"),
"on": SubResource("Animation_fbi8r")
}

[node name="Fire" instance=ExtResource("1_dtbio")]
script = ExtResource("2_0si5v")
damage = 5

[node name="Collision" parent="." index="0"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_at8ie")

[node name="Collision" parent="DetectionArea" index="0"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_0crwd")
disabled = true

[node name="Texture" parent="." index="2"]
texture = ExtResource("2_yk6pm")

[node name="Animation" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_3ypk0")
}

[node name="StateTimer" type="Timer" parent="." index="4"]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="on_detection_area_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
[connection signal="timeout" from="StateTimer" to="." method="on_state_timer_timeout"]
